# Ctrl-Apply

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
backend/: config.py  db.py  main.py
backend/models/: __init__.py  application.py  form.py  job.py  profile.py
backend/routers/: form.py  profile.py  ws.py
backend/services/: form_service.py  llm_service.py  playwright_service.py  profile_service.py
data/: jobs.duckdb  profile.template.yaml  profile.yaml
docs/: PROGRESS.md  USAGE_GUIDE.md  building-local-job-application-automation-tool-2026.md
extension/: manifest.json  service-worker.js
extension/content/: detector.js  extractor.js
extension/sidepanel/: index.html  panel.css  panel.js
scripts/: launch-chrome.sh
